# ComprehensiveConfig

./: .gitignore  .readthedocs.yaml  pyproject.toml  readme.md  requirements.txt  testing.py
.github/workflows/: publish.yml  pytest.yml  test_publish.yml
comprehensiveconfig/: __init__.py  configio.py  json.py  spec.py  toml.py  utility.py
docs/: requirements.txt
docs/source/: conf.py  fields.rst  globaltoc.rst  index.rst  json_writer.rst  toml_writer.rst  utilities.rst  writers.rst
docs/source/fields/: basic_fields.rst  index.rst
tests/: conftest.py  test_fields.py  test_writers.py
