[project]
name = "comprehensiveconfig"
version = "1.0.1"
description = "A library to create ergonomic, auto-validated configuration models with great support for static type annotations."
readme = "readme.md"
requires-python = ">=3.12"
dependencies = []

license = { text = "LGPL-3.0-only" }
keywords = [
    "config",
    "configuration",
    "validation",
    "validator",
    "ergonomic",
    "models",
    "model",
    "pydantic-like",
    "toml",
    "toml-writer",
    "json",
    "json-writer",
    "type-annotated",
    "type-annotations",
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: File Formats :: JSON",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://summersweet.software"
Repository = "https://github.com/summersweet-software/comprehensiveconfig"
Issues = "https://github.com/summersweet-software/comprehensiveconfig/issues"
Documentation = "https://comprehensiveconfig.readthedocs.io/en/"

[dependency-groups]
dev = [
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
